migrate registry project